--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-select-event": "^5.5.0",
+    "redux-mock-store": "^1.5.4"
   }
 }
