--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
+    "test:watch": "npm test -- --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -42,7 +43,12 @@
     ]
   },
   "devDependencies": {
+    "babel-jest": "^28.0.2",
+    "jest": "^28.0.2",
     "react-select-event": "^5.5.0",
     "redux-mock-store": "^1.5.4"
+  },
+  "transform": {
+    "\\.js$": "<rootDir>/node_modules/babel-jest"
   }
 }
